// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// service server definiton
service ParkirArea {
  rpc MasukParkir (Masuk) returns (Masuk){}
  rpc KeluarParkir (Keluar) returns (Bill){}
  rpc FindId (Validation) returns (Validation){}
}

message Empty {}

message Validation{
  string id =1;
  bool check =2;
}

message Keluar {
  string id = 1;
  string tanggalKeluar = 2;
  string platNo = 3;
  string tipe = 4;
}

message Masuk {
  string id = 1;
  string tanggalmasuk = 2;
}

message Bill {
 int32 tarif =3;
}

